Working with Comms

--- a/Zach/Wind Turbines/map.ipynb
+++ b/Zach/Wind Turbines/map.ipynb
@@ -21,6 +21,7 @@
    "outputs": [],
    "source": [
     "import time\n",
+    "from shared import *\n",
     "from WeatherMap import WeatherMap"
    ]
   },
@@ -33,7 +34,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1482/1482 [00:15<00:00, 96.31it/s]\n"
+      "100%|██████████| 1482/1482 [00:12<00:00, 114.19it/s]\n"
      ]
     }
    ],
@@ -48,11 +49,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#### TODO Move this into a class\n",
+    "####      Make a timer to call update_table after X ms\n",
+    "\n",
     "def update_table(m):\n",
     "    try:\n",
-    "        m.update_table(GLOBAL_SHOW_STATION)\n",
-    "    except:\n",
-    "        pass\n",
+    "        m.update_table(GET_GLOBAL_SHOW_STATION())\n",
+    "    except Exception as e:\n",
+    "        print(e)\n",
     "\n",
     "# Define the callback function that will be used\n",
     "current_time = lambda: int(round(time.time() * 1000))\n",
@@ -71,8 +75,10 @@
     "            last_time = current_time()\n",
     "            \n",
     "    elif type == 'mouseup':\n",
-    "        time.sleep(0.1)\n",
-    "        update_table(alberta)#coordinates)\n",
+    "        #time.sleep(0.2)\n",
+    "        #update_table(alberta)#coordinates)\n",
+    "        if alberta.comm is not None:\n",
+    "            print(alberta.comm['content']['data']['index'])\n",
     "        \n",
     "alberta.map.on_interaction(update_info)"
    ]
@@ -85,7 +91,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "896c51c6e6ac435f885bae8ee12afe56",
+       "model_id": "15a003e61862464b83269912d7b7f236",
        "version_major": 2,
        "version_minor": 0
       },
@@ -126,7 +132,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e2014f06f92348cab034bdd6a69dead8",
+       "model_id": "055bd0a0ebc948cf8a1e2bbb87a9bcb0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -156,8 +162,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "name 'GLOBAL_SHOW_STATION' is not defined\n",
-      "name 'GLOBAL_SHOW_STATION' is not defined\n"
+      "85\n",
+      "85\n",
+      "85\n",
+      "85\n",
+      "85\n"
      ]
     }
    ],
@@ -167,10 +176,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['__name__', '__doc__', '__package__', '__loader__', '__spec__', '__builtin__', '__builtins__', '_ih', '_oh', '_dh', 'In', 'Out', 'get_ipython', 'exit', 'quit', '_', '__', '___', '_i', '_ii', '_iii', '_i1', '_i2', 'time', 'GLOBAL_SHOW_STATION', 'SET_GLOBAL_SHOW_STATION', 'GET_GLOBAL_SHOW_STATION', 'WeatherMap', '_i3', 'alberta', '_i4', 'update_table', 'current_time', 'last_time', 'blacklist', 'update_info', '_i5', '_5', '_i6', '_6', '_i7'])"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "globals().keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'tuvalabs' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-8-f8403f9a0fca>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtuvalabs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcom\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'tuvalabs' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "tuvalabs.com"
+   ]
   }
  ],
  "metadata": {
