--- a/Zach/Wind Turbines/testing.ipynb
+++ b/Zach/Wind Turbines/testing.ipynb
@@ -793,12 +793,521 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 1,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "| Stretch/Untouched | ProbDistribution | Accuracy |\n",
-    "| --- | --- | --- |\n",
-    "| Stretched | Gaussian | .843 |"
+    "HTML_RANGE_SLIDER='''<!doctype html>\n",
+    "<html lang=\"en\">\n",
+    "<head>\n",
+    "  <meta charset=\"utf-8\">\n",
+    "  <meta name=\"viewport\" content=\"width=device-width, initial-scale=1\">\n",
+    "  <title>jQuery UI Slider - Range slider</title>\n",
+    "  <link rel=\"stylesheet\" href=\"//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css\">\n",
+    "  <link rel=\"stylesheet\" href=\"/resources/demos/style.css\">\n",
+    "  <script src=\"https://code.jquery.com/jquery-1.12.4.js\"></script>\n",
+    "  <script src=\"https://code.jquery.com/ui/1.12.1/jquery-ui.js\"></script>\n",
+    "  <script>\n",
+    "  $( function() {\n",
+    "    $( \"#slider-range\" ).slider({\n",
+    "      range: true,\n",
+    "      min: 0,\n",
+    "      max: 500,\n",
+    "      values: [ 75, 300 ],\n",
+    "      slide: function( event, ui ) {\n",
+    "        $( \"#amount\" ).val( \"$\" + ui.values[ 0 ] + \" - $\" + ui.values[ 1 ] );\n",
+    "      }\n",
+    "    });\n",
+    "    $( \"#amount\" ).val( \"$\" + $( \"#slider-range\" ).slider( \"values\", 0 ) +\n",
+    "      \" - $\" + $( \"#slider-range\" ).slider( \"values\", 1 ) );\n",
+    "  } );\n",
+    "  </script>\n",
+    "</head>\n",
+    "<body>\n",
+    " \n",
+    "<p>\n",
+    "  <label for=\"amount\">Price range:</label>\n",
+    "  <input type=\"text\" id=\"amount\" readonly style=\"border:0; color:#f6931f; font-weight:bold;\">\n",
+    "</p>\n",
+    " \n",
+    "<div id=\"slider-range\"></div>\n",
+    " \n",
+    " \n",
+    "</body>\n",
+    "</html>'''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "743c138e83264f48afa2b33e4715327b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/html": [
+       "<p>Failed to display Jupyter Widget of type <code>HTML</code>.</p>\n",
+       "<p>\n",
+       "  If you're reading this message in the Jupyter Notebook or JupyterLab Notebook, it may mean\n",
+       "  that the widgets JavaScript is still loading. If this message persists, it\n",
+       "  likely means that the widgets JavaScript library is either not installed or\n",
+       "  not enabled. See the <a href=\"https://ipywidgets.readthedocs.io/en/stable/user_install.html\">Jupyter\n",
+       "  Widgets Documentation</a> for setup instructions.\n",
+       "</p>\n",
+       "<p>\n",
+       "  If you're reading this message in another frontend (for example, a static\n",
+       "  rendering on GitHub or <a href=\"https://nbviewer.jupyter.org/\">NBViewer</a>),\n",
+       "  it may mean that your frontend doesn't currently support widgets.\n",
+       "</p>\n"
+      ],
+      "text/plain": [
+       "HTML(value='<!DOCTYPE html>\\n<html>\\n<body>\\n\\n<h1>Custom Range Slider</h1>\\n<p>Drag the slider to display the current value.</p>\\n\\n<div class=\"slidecontainer\">\\n  <input type=\"range\" min=\"1840\" max=\"2018\" value=\"2000\" class=\"slider\" id=\"myRange\" oninput=\\'document.getElementById(\"demo\").innnerHTML=document.getElementById(\"myRange\").value;\\'>\\n  <p>Value: <span id=\"demo\"></span></p>\\n</div>\\n\\n</body>\\n</html>')"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "#from IPython.display import HTML\n",
+    "from ipywidgets import HTML\n",
+    "from constants import *\n",
+    "\n",
+    "html = HTML(HTML_SLIDER)\n",
+    "html"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "f\n"
+     ]
+    }
+   ],
+   "source": [
+    "def f():\n",
+    "    print(\"hello world\")\n",
+    "    \n",
+    "print(f.__name__)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "'''\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "print('''\\'\\'\\'''')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f483af81b9c647be90a29c8c52fff640",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/html": [
+       "<p>Failed to display Jupyter Widget of type <code>HTML</code>.</p>\n",
+       "<p>\n",
+       "  If you're reading this message in the Jupyter Notebook or JupyterLab Notebook, it may mean\n",
+       "  that the widgets JavaScript is still loading. If this message persists, it\n",
+       "  likely means that the widgets JavaScript library is either not installed or\n",
+       "  not enabled. See the <a href=\"https://ipywidgets.readthedocs.io/en/stable/user_install.html\">Jupyter\n",
+       "  Widgets Documentation</a> for setup instructions.\n",
+       "</p>\n",
+       "<p>\n",
+       "  If you're reading this message in another frontend (for example, a static\n",
+       "  rendering on GitHub or <a href=\"https://nbviewer.jupyter.org/\">NBViewer</a>),\n",
+       "  it may mean that your frontend doesn't currently support widgets.\n",
+       "</p>\n"
+      ],
+      "text/plain": [
+       "HTML(value='<html>\\n<body>\\n\\n<button type=\\'button\\' onclick=\"function rrun()\\n{\\n    console.log(\\'Hello\\');\\n    console.log(document.getElementById(\\'header\\').innerHTML);\\n    comm = Jupyter.notebook.kernel.comm_manager.new_comm(\\'my_comm_target\\',\\n                                                        {\\'foo\\': 6});\\n    // Send data\\n    comm.send({\\'foo\\': 7});\\n\\n    // Register a handler\\n    comm.on_msg(function(msg) {\\n        console.log(msg.content.data.foo);\\n    });\\n} rrun();\">Hello</button>\\n\\n<script>\\nrun = function run_comm()\\n{\\n    console.log(\\'Hello\\');\\n    console.log(document.getElementById(\\'header\\').innerHTML);\\n    comm = Jupyter.notebook.kernel.comm_manager.new_comm(\\'my_comm_target\\',\\n                                                        {\\'foo\\': 6})\\n    // Send data\\n    comm.send({\\'foo\\': 7});\\n\\n    // Register a handler\\n    comm.on_msg(function(msg) {\\n        console.log(msg.content.data.foo);\\n    });\\n}\\n</script>\\n\\n</body>\\n</html>')"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "#from IPython.display import HTML\n",
+    "from ipywidgets import HTML\n",
+    "\n",
+    "HTML_COMM='''<html>\n",
+    "<body>\n",
+    "\n",
+    "<button type='button' onclick=\"function rrun()\n",
+    "{\n",
+    "    console.log('Hello');\n",
+    "    console.log(document.getElementById('header').innerHTML);\n",
+    "    comm = Jupyter.notebook.kernel.comm_manager.new_comm('my_comm_target',\n",
+    "                                                        {'foo': 6});\n",
+    "    // Send data\n",
+    "    comm.send({'foo': 7});\n",
+    "\n",
+    "    // Register a handler\n",
+    "    comm.on_msg(function(msg) {\n",
+    "        console.log(msg.content.data.foo);\n",
+    "    });\n",
+    "} rrun();\">Hello</button>\n",
+    "\n",
+    "<script>\n",
+    "run = function run_comm()\n",
+    "{\n",
+    "    console.log('Hello');\n",
+    "    console.log(document.getElementById('header').innerHTML);\n",
+    "    comm = Jupyter.notebook.kernel.comm_manager.new_comm('my_comm_target',\n",
+    "                                                        {'foo': 6})\n",
+    "    // Send data\n",
+    "    comm.send({'foo': 7});\n",
+    "\n",
+    "    // Register a handler\n",
+    "    comm.on_msg(function(msg) {\n",
+    "        console.log(msg.content.data.foo);\n",
+    "    });\n",
+    "}\n",
+    "</script>\n",
+    "\n",
+    "</body>\n",
+    "</html>'''\n",
+    "\n",
+    "\n",
+    "\n",
+    "html = HTML(HTML_COMM)\n",
+    "html.hold_sync()\n",
+    "html"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "0768c5b22c8e481c8666517dbc158cd5",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/html": [
+       "<p>Failed to display Jupyter Widget of type <code>HTML</code>.</p>\n",
+       "<p>\n",
+       "  If you're reading this message in the Jupyter Notebook or JupyterLab Notebook, it may mean\n",
+       "  that the widgets JavaScript is still loading. If this message persists, it\n",
+       "  likely means that the widgets JavaScript library is either not installed or\n",
+       "  not enabled. See the <a href=\"https://ipywidgets.readthedocs.io/en/stable/user_install.html\">Jupyter\n",
+       "  Widgets Documentation</a> for setup instructions.\n",
+       "</p>\n",
+       "<p>\n",
+       "  If you're reading this message in another frontend (for example, a static\n",
+       "  rendering on GitHub or <a href=\"https://nbviewer.jupyter.org/\">NBViewer</a>),\n",
+       "  it may mean that your frontend doesn't currently support widgets.\n",
+       "</p>\n"
+      ],
+      "text/plain": [
+       "HTML(value='<!DOCTYPE html>\\n<html>\\n<body>\\n<script>\\n</script>\\n<button onclick=\"comm = Jupyter.notebook.kernel.comm_manager.new_comm(\\'mycomm\\', {\\'foo\\': 6});\\ncomm.send({\\'hello\\': \\'world\\'});\">World</button>\\n</body>\\n</html>\\n')"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "from ipywidgets import HTML\n",
+    "HTML('''<!DOCTYPE html>\n",
+    "<html>\n",
+    "<body>\n",
+    "<script>\n",
+    "</script>\n",
+    "<button onclick=\"comm = Jupyter.notebook.kernel.comm_manager.new_comm('mycomm');\n",
+    "comm.send({'hello': 'world'});\">World</button>\n",
+    "</body>\n",
+    "</html>\n",
+    "''')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "97b946c77f684a08bdb5c93c12c947c8",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/html": [
+       "<p>Failed to display Jupyter Widget of type <code>HTML</code>.</p>\n",
+       "<p>\n",
+       "  If you're reading this message in the Jupyter Notebook or JupyterLab Notebook, it may mean\n",
+       "  that the widgets JavaScript is still loading. If this message persists, it\n",
+       "  likely means that the widgets JavaScript library is either not installed or\n",
+       "  not enabled. See the <a href=\"https://ipywidgets.readthedocs.io/en/stable/user_install.html\">Jupyter\n",
+       "  Widgets Documentation</a> for setup instructions.\n",
+       "</p>\n",
+       "<p>\n",
+       "  If you're reading this message in another frontend (for example, a static\n",
+       "  rendering on GitHub or <a href=\"https://nbviewer.jupyter.org/\">NBViewer</a>),\n",
+       "  it may mean that your frontend doesn't currently support widgets.\n",
+       "</p>\n"
+      ],
+      "text/plain": [
+       "HTML(value='<!DOCTYPE html>\\n<html>\\n<body>\\n<script>\\n</script>\\n<button onclick=\"comm = Jupyter.notebook.kernel.comm_manager.new_comm(\\'mycomm\\');\\ncomm.send({\\'hello\\': \\'goodbye\\'});\">Goodbye</button>\\n</body>\\n</html>\\n')"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "from ipywidgets import HTML\n",
+    "HTML('''<!DOCTYPE html>\n",
+    "<html>\n",
+    "<body>\n",
+    "<script>\n",
+    "</script>\n",
+    "<button onclick=\"comm = Jupyter.notebook.kernel.comm_manager.new_comm('mycomm');\n",
+    "comm.send({'hello': 'goodbye'});\">Goodbye</button>\n",
+    "</body>\n",
+    "</html>\n",
+    "''')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from ipykernel.comm import Comm\n",
+    "message = ''\n",
+    "def comm(comm, msg):\n",
+    "    @comm.on_msg\n",
+    "    def _recv(msg):\n",
+    "        global message\n",
+    "        message = msg\n",
+    "get_ipython().kernel.comm_manager.register_target('mycomm', comm)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "b3535cfab47d472eba5a15c7a92dcd04",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/html": [
+       "<p>Failed to display Jupyter Widget of type <code>HTML</code>.</p>\n",
+       "<p>\n",
+       "  If you're reading this message in the Jupyter Notebook or JupyterLab Notebook, it may mean\n",
+       "  that the widgets JavaScript is still loading. If this message persists, it\n",
+       "  likely means that the widgets JavaScript library is either not installed or\n",
+       "  not enabled. See the <a href=\"https://ipywidgets.readthedocs.io/en/stable/user_install.html\">Jupyter\n",
+       "  Widgets Documentation</a> for setup instructions.\n",
+       "</p>\n",
+       "<p>\n",
+       "  If you're reading this message in another frontend (for example, a static\n",
+       "  rendering on GitHub or <a href=\"https://nbviewer.jupyter.org/\">NBViewer</a>),\n",
+       "  it may mean that your frontend doesn't currently support widgets.\n",
+       "</p>\n"
+      ],
+      "text/plain": [
+       "HTML(value='goodbye')"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "from ipywidgets import Label\n",
+    "from ipywidgets import HTML\n",
+    "h = HTML()\n",
+    "h.value = (message['content']['data']['hello'])\n",
+    "h.hold_sync()\n",
+    "display(h)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from ipykernel.comm import Comm\n",
+    "hello = ''\n",
+    "def target_func(comm, msg):\n",
+    "    # comm is the kernel Comm instance\n",
+    "    # msg is the comm_open message\n",
+    "    \n",
+    "    # Register handler for later messages\n",
+    "    @comm.on_msg\n",
+    "    def _recv(msg):\n",
+    "        # Use msg['content']['data'] for the data in the message\n",
+    "        global hello\n",
+    "        hello = msg\n",
+    "        #print(msg)\n",
+    "    \n",
+    "    # Send data to the frontend\n",
+    "    comm.send({'foo': 5})\n",
+    "\n",
+    "get_ipython().kernel.comm_manager.register_target('my_comm_target', target_func)\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "''"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hello"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n",
+      "Renders the string `value` as HTML.\n"
+     ]
+    }
+   ],
+   "source": [
+    "from IPython.display import HTML\n",
+    "html = HTML()\n",
+    "print(html.__doc__)\n",
+    "\n",
+    "from ipywidgets import HTML\n",
+    "html = HTML()\n",
+    "print(html._)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "b6ea152ca6064a119f53b5d84c7a1627",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/html": [
+       "<p>Failed to display Jupyter Widget of type <code>HTML</code>.</p>\n",
+       "<p>\n",
+       "  If you're reading this message in the Jupyter Notebook or JupyterLab Notebook, it may mean\n",
+       "  that the widgets JavaScript is still loading. If this message persists, it\n",
+       "  likely means that the widgets JavaScript library is either not installed or\n",
+       "  not enabled. See the <a href=\"https://ipywidgets.readthedocs.io/en/stable/user_install.html\">Jupyter\n",
+       "  Widgets Documentation</a> for setup instructions.\n",
+       "</p>\n",
+       "<p>\n",
+       "  If you're reading this message in another frontend (for example, a static\n",
+       "  rendering on GitHub or <a href=\"https://nbviewer.jupyter.org/\">NBViewer</a>),\n",
+       "  it may mean that your frontend doesn't currently support widgets.\n",
+       "</p>\n"
+      ],
+      "text/plain": [
+       "HTML(value='<!DOCTYPE html>\\n<html>\\n<body>\\n\\n<button \\nonclick=\\'function myFunction() {\\n    document.getElementById(\"demo\").innerHTML = \"Hello World!\";\\n} myFunction()\\'\\n>Try it</button>\\n\\n<p id=\"demo\"></p>\\n\\n\\n</body>\\n</html>\\n')"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "from ipywidgets import HTML\n",
+    "\n",
+    "                  \n",
+    "HTML('''<!DOCTYPE html>\n",
+    "<html>\n",
+    "<body>\n",
+    "\n",
+    "<button \n",
+    "onclick='function myFunction() {\n",
+    "    document.getElementById(\"demo\").innerHTML = \"Hello World!\";\n",
+    "} myFunction()'\n",
+    ">Try it</button>\n",
+    "\n",
+    "<p id=\"demo\"></p>\n",
+    "\n",
+    "\n",
+    "</body>\n",
+    "</html>\n",
+    "''')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from ipywidgets import HTML\n",
+    "\n",
+    "HTML_STR='''<!DOCTYPE html>\n",
+    "<html>\n",
+    "<head>\n",
+    "</head>\n",
+    "<body>\n",
+    "</body>\n",
+    "</html>'''\n",
+    "\n",
+    "HTML_BUTTON='''<button '''"
    ]
   }
  ],
