Fixed display bug

--- a/Zach/Wind Turbines/map.ipynb
+++ b/Zach/Wind Turbines/map.ipynb
@@ -21,6 +21,7 @@
    "outputs": [],
    "source": [
     "import time\n",
+    "import threading\n",
     "from shared import *\n",
     "from WeatherMap import WeatherMap"
    ]
@@ -34,7 +35,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1482/1482 [00:12<00:00, 114.19it/s]\n"
+      "100%|██████████| 1482/1482 [00:15<00:00, 94.55it/s]\n"
      ]
     }
    ],
@@ -52,11 +53,11 @@
     "#### TODO Move this into a class\n",
     "####      Make a timer to call update_table after X ms\n",
     "\n",
-    "def update_table(m):\n",
-    "    try:\n",
-    "        m.update_table(GET_GLOBAL_SHOW_STATION())\n",
-    "    except Exception as e:\n",
-    "        print(e)\n",
+    "# def update_table(m):\n",
+    "#     try:\n",
+    "#         m.update_table(GET_GLOBAL_SHOW_STATION())\n",
+    "#     except Exception as e:\n",
+    "#         print(e)\n",
     "\n",
     "# Define the callback function that will be used\n",
     "current_time = lambda: int(round(time.time() * 1000))\n",
@@ -73,12 +74,7 @@
     "        if current_time()-last_time > 50:\n",
     "            alberta.station_find(coordinates)\n",
     "            last_time = current_time()\n",
-    "            \n",
-    "    elif type == 'mouseup':\n",
-    "        #time.sleep(0.2)\n",
-    "        #update_table(alberta)#coordinates)\n",
-    "        if alberta.comm is not None:\n",
-    "            print(alberta.comm['content']['data']['index'])\n",
+    "\n",
     "        \n",
     "alberta.map.on_interaction(update_info)"
    ]
@@ -91,7 +87,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "15a003e61862464b83269912d7b7f236",
+       "model_id": "afc90346c5964878b036fcd92595f524",
        "version_major": 2,
        "version_minor": 0
       },
@@ -132,7 +128,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "055bd0a0ebc948cf8a1e2bbb87a9bcb0",
+       "model_id": "ed9bf00a9e9d48308c68639835f43613",
        "version_major": 2,
        "version_minor": 0
       },
@@ -157,17 +153,6 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "85\n",
-      "85\n",
-      "85\n",
-      "85\n",
-      "85\n"
-     ]
     }
    ],
    "source": [
@@ -177,6 +162,15 @@
   {
    "cell_type": "code",
    "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "alberta.comm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {
     "scrolled": false
    },
@@ -184,10 +178,10 @@
     {
      "data": {
       "text/plain": [
-       "dict_keys(['__name__', '__doc__', '__package__', '__loader__', '__spec__', '__builtin__', '__builtins__', '_ih', '_oh', '_dh', 'In', 'Out', 'get_ipython', 'exit', 'quit', '_', '__', '___', '_i', '_ii', '_iii', '_i1', '_i2', 'time', 'GLOBAL_SHOW_STATION', 'SET_GLOBAL_SHOW_STATION', 'GET_GLOBAL_SHOW_STATION', 'WeatherMap', '_i3', 'alberta', '_i4', 'update_table', 'current_time', 'last_time', 'blacklist', 'update_info', '_i5', '_5', '_i6', '_6', '_i7'])"
+       "dict_keys(['__name__', '__doc__', '__package__', '__loader__', '__spec__', '__builtin__', '__builtins__', '_ih', '_oh', '_dh', 'In', 'Out', 'get_ipython', 'exit', 'quit', '_', '__', '___', '_i', '_ii', '_iii', '_i1', '_i2', 'time', 'threading', 'GLOBAL_SHOW_STATION', 'SET_GLOBAL_SHOW_STATION', 'GET_GLOBAL_SHOW_STATION', 'WeatherMap', '_i3', 'alberta', '_i4', 'current_time', 'last_time', 'blacklist', 'update_info', '_i5', '_5', '_i6', '_6', '_i7', '_i8'])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -198,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -208,7 +202,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-8-f8403f9a0fca>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtuvalabs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcom\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-9-f8403f9a0fca>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtuvalabs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcom\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[0;31mNameError\u001b[0m: name 'tuvalabs' is not defined"
      ]
     }
